--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -41,7 +41,16 @@
                 <div class="aside"><img src="{{ item.product.images.url }}" class="img-sm"></div>
                 <figcaption class="info">
                     <a href="{{ item.product.get_url }}" class="title text-dark">{{ item.product.product_name }}</a>
-                    <p class="text-muted small">Matrix: 25 Mpx <br> Brand: Canon</p>
+                    <p class="text-muted small">
+                        {% if item.variations.all %}
+                        {% for i in item.variations.all %}
+                        <p>
+
+                            {{ i.variation_category | capfirst }}: {{ i.variation_value | capfirst }}
+                        </p>
+                        {% endfor %}
+                        {% endif %}
+                    </p>
                 </figcaption>
             </figure>
         </td>
