--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -63,7 +63,14 @@
                     </div>
                     <input type="text" class="form-control"  value="{{ item.quantity }}">
                     <div class="input-group-append">
-                                <a href="{% url 'add_cart' item.product.id %}" class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i> </a>
+                        <form action="{% url 'add_cart' item.product.id %}" method="POST">
+                            {% csrf_token %}
+                            {% for i in item.variations.all %}
+                            <input type="hidden" name="{{ i.variation_category |lower }}" value="{{ i.variation_value | capfirst}}">
+
+                            {% endfor %}
+                            <button type='submit' class='btn btn-light' value='Submit'><i class="fa fa-plus"></i></button>
+                        </form>
                             </div>
                         </div> <!-- input-group.// -->
                     </div> <!-- col.// -->
@@ -75,7 +82,7 @@
                     </div> <!-- price-wrap .// -->
         </td>
         <td class="text-right"> 
-            <a href="{% url 'remove_cart_item' item.id %}" class="btn btn-danger"> Remove</a>
+            <a href="{% url 'remove_cart_item' item.id %}" onclick="alert('Are You Sure!')" class="btn btn-danger"> Remove</a>
         </td>
     </tr>
     {% endfor %}
