--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -7,6 +7,16 @@
 <section class="section-conten padding-y" style="min-height:84vh">
 
     <!-- ============================ COMPONENT LOGIN   ================================= -->
+
+    {% if request.GET.command == 'verification' %}
+
+    <div class="container mx-auto alert alert-info text-center" role="alert" style="max-width: 1024px; margin-top:100px;">
+        Thank You for registering. We have sent you a verification email adress [{{request.GET.email}}].  Please verify it!'
+        <br>
+        Already verified? <a href="{% url 'login' %}">Login</a>
+</div>
+
+    {% else %}
         <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
 
           <div class="card-body">
@@ -36,7 +46,7 @@
          <br><br>
     <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
     
-    
+    {% endif %}
     </section>
     <!-- ========================= SECTION CONTENT END// ========================= -->
     
