--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -74,7 +74,7 @@
                             <small class="title text-muted">Welcome {{user.first_name}}!</small>
                             <div>
                                 <a href="#">Dashboard</a> <span class="dark-transp"> | </span>
-                                <a href="{% url 'login' %}"> Logout</a>
+                                <a href="{% url 'logout' %}"> Logout</a>
                             </div>
                         </div>
                         {% endif %}
