--- a/templates/accounts/account_verification_email.html
+++ b/templates/accounts/account_verification_email.html
@@ -1,10 +1,10 @@
 {% autoescape off %}
 
 Hi {{user.first_name}},
-Please click on below link to confirm your registraton.
+Please click on below link to confirm your registration.
 http://{{domain}}{% url 'activate' uidb64=uid token=token %}
 
-if You think it's not your, please ignore this email.
+If You think it's not your, please ignore this email.
 
 
 {% endautoescape %}
