--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -11,7 +11,7 @@
     {% if request.GET.command == 'verification' %}
 
     <div class="container mx-auto alert alert-info text-center" role="alert" style="max-width: 1024px; margin-top:100px;">
-        Thank You for registering. We have sent you a verification email adress [{{request.GET.email}}].  Please verify it!'
+        Thank You for registering. We have sent you a verification email address [{{request.GET.email}}]. Please verify it!'
         <br>
         Already verified? <a href="{% url 'login' %}">Login</a>
 </div>
