--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -14,7 +14,7 @@
             <h4 class="cart-title mb-4">
                 Billing Address
             </h4>
-            <form action="" method="POST">
+            <form action="{% url 'place_order' %}" method="POST">
                 {% csrf_token %}
                 <div class="form-row">
 
@@ -26,6 +26,18 @@
                     <div class="form-group">
                         <label for="">Last Name</label>
                         <input type="text" name="last_name" class="form-control" required>
+                    </div>
+                </div>
+                <div class="form-row">
+
+                    <div class="form-group">
+                        <label for="">Email</label>
+                        <input type="email" name="email" class="form-control" required>
+                    </div>
+                    
+                    <div class="form-group">
+                        <label for="">Phone </label>
+                        <input type="text" name="phone" class="form-control" required>
                     </div>
                 </div>
                 <div class="form-row">
