--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
 
     <!-- custom javascript -->
     <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
-{#    pay-pall script#}
+    <!--    pay-pall script -->
     <script src="https://www.paypal.com/sdk/js?client-id=AQ-pHEX8Td13UCgHHXhtJPp-YPCnr1HLmsf_yRjno1a6Xz_qABAb16Btr079MMYjNXM8fv-tGnTSZ_zg&currency=USD"></script>
 
 
