--- a/templates/orders/payments.html
+++ b/templates/orders/payments.html
@@ -217,7 +217,7 @@
 							"X-CSRFToken": csrftoken,
 						},
 						body: JSON.stringify({
-							orderID: 1,
+							orderID: orderID,
 							transID: details.id,
 							payment_method: payment_method,
 							status: details.status,
