--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -61,8 +61,9 @@
               {% if single_product.stock == 0 %}
               <h5 class="text-danger">Out of stock</h5>
               {% else %}
-              <button type="submit" class="btn btn-primary"> <span class="text"> Add to cart</span> <i class="fas fa-shopping-cart"></i> </button>
-{% endif %}
+              <button type="submit" class="btn btn-primary"> <span class="text"> Add to cart</span> <i
+                  class="fas fa-shopping-cart"></i> </button>
+              {% endif %}
             </article> <!-- product-info-aside .// -->
           </form>
 
@@ -75,9 +76,47 @@
     <div class="row">
       <div class="col-md-9">
 
+
+
+        <form action="{% url 'submit_review' single_product.id %}" method="post">
+          {% csrf_token %}
+          <h5>
+            Write Review
+          </h5>
+          <div>
+            <!-- Rating stars -->
+            <label for="">How do you rate this product?</label><br>
+            <div class="rate">
+              <input type="radio" name="rating" id="rating10" value="5" required><label for="rating10" title="5"></label>
+              <input type="radio" name="rating" id="rating9" value="4.5" required><label for="rating9" title="4.5" class="half"></label>
+              <input type="radio" name="rating" id="rating8" value="4" required><label for="rating8" title="4"></label>
+              <input type="radio" name="rating" id="rating7" value="3.5" required><label for="rating7" title="3.5" class="half"></label>
+              <input type="radio" name="rating" id="rating6" value="3" required><label for="rating6" title="3"></label>
+              <input type="radio" name="rating" id="rating5" value="2.5" required><label for="rating5" title="2.5" class="half"></label>
+              <input type="radio" name="rating" id="rating4" value="2" required><label for="rating4" title="2"></label>
+              <input type="radio" name="rating" id="rating3" value="1.5" required><label for="rating3" title="1.5" class="half"></label>
+              <input type="radio" name="rating" id="rating2" value="1" required><label for="rating2" title="1"></label>
+              <input type="radio" name="rating" id="rating1" value="0.5" required><label for="rating1" title="0.5" class="half"></label>
+            </div>
+            <br>
+            Review Title:
+            <input type="text" class="form-control" name="'subject" required><br>
+            Review:
+            <textarea name="review" cols="30" rows="5" class="form-control" ></textarea><br>
+            {% if user.is_authenticated %}
+            <input type="submit" value="Submit Review" class="btn btn-primary">
+            {% else %}
+            <p>
+              You Must Log in to Post Review <span><a href="{% url 'login' %}">Login now</a></span>
+            </p>
+
+            {% endif %}
+          </div>
+          {% include 'includes/alerts.html' %}
+        </form>
+        <br>
         <header class="section-heading">
           <h3>Customer Reviews </h3>
-
         </header>
 
         <article class="box mb-3">
@@ -86,7 +125,6 @@
             <div class="text">
               <span class="date text-muted float-md-right">24.04.2020 </span>
               <h6 class="mb-1">Mike John </h6>
-
             </div>
           </div> <!-- icontext.// -->
           <div class="mt-3">
@@ -97,16 +135,9 @@
             </p>
           </div>
         </article>
-
-
-
       </div> <!-- col.// -->
     </div> <!-- row.// -->
-
-
   </div> <!-- container .//  -->
 </section>
 <!-- ========================= SECTION CONTENT END// ========================= -->
-
-
 {% endblock %}
