--- a/store/static/css/custoxxm.css
+++ b/store/static/css/custoxxm.css
@@ -1,4 +1,7 @@
 /* hide review*/
+*{
+    background-color: #cc9000;
+}
 
 .rate > input{
     display: none;
@@ -26,8 +29,26 @@
 
 
 /* half class */
-.rate.half:before{
+.rate .half:before{
     content: "\f089";
     position: absolute;
     padding-right: 0;
 }
+
+/* click an dhover */
+
+input:checked ~ label, label:hover ~ label{
+    color: #ffb503;
+}
+
+/* Hover highlites */
+input:checked + label:hover, input:hover ~ label:checked, input:checked ~ label:hover ~ label,
+label:hover ~ input:checked ~ label{
+    color: #cc9000;
+}
+
+.rating-star i{
+    color: #ffb503 !important;
+
+}
+  
