--- a/templates/accounts/change_password.html
+++ b/templates/accounts/change_password.html
@@ -12,62 +12,29 @@
                 <main class="col-md-9">
                     <article class="card">
                         <header class="card-header">
-                            <strong class="d-inline-block mr-3">Edit your Profile.</strong>
+                            <strong class="d-inline-block mr-3">Change Your Password.</strong>
                         </header>
                         <div class="card-body">
-                            <div class="text-right">
-                                <img src="{{ userprofile.profile_picture.url }}"
-                                     alt="Profile Picture" width="100"
-                                     style="border-radius: 50px">
-                            </div><br>
-
                             <div class="row">
                                 <div class="col-md-12">
-                                    <form action="{% url 'edit_profile' %}" method="POST" enctype="multipart/form-data">
+                                    <form action="{% url 'change_password' %}" method="POST" enctype="multipart/form-data">
                                         {% csrf_token %}
-                                        <div class="form-row">
-                                             <div class="form-group col-md-6">
-                                                 <label>First Name</label>
-                                                 {{ user_form.first_name }}
-                                             </div>
-                                             <div class="form-group col-md-6">
-                                                 <label>Last Name</label>
-                                                 {{ user_form.last_name }}
-                                             </div>
-                                        </div>
-                                        <div class="form-row">
-                                             <div class="form-group col-md-6">
-                                                 <label>Phone number</label>
-                                                 {{ user_form.phone_number }}
-                                             </div>
-                                             <div class="form-group col-md-6">
-                                                 <label>Profile Picture</label>
-                                                 {{ profile_form.profile_picture }}
-                                             </div>
+                                        <div class="form-group">
+                                            <label>Current password</label>
+                                            <input type="password" name="current_password"
+                                                   placeholder="Current Password" class="form-control" required>
                                         </div>
                                         <div class="form-group">
-                                            <label>Address Line 1</label>
-                                                 {{ profile_form.address_line_1 }}
+                                            <label>Create New Password</label>
+                                            <input type="password" name="new_password"
+                                                   placeholder="Create New Password" class="form-control" required>
                                         </div>
                                         <div class="form-group">
-                                            <label>Address Line 2</label>
-                                                 {{ profile_form.address_line_2 }}
+                                            <label>Confirm New Password</label>
+                                            <input type="password" name="confirm_password"
+                                                   placeholder="Confirm New Password" class="form-control" required>
                                         </div>
-                                        <div class="form-row">
-                                             <div class="form-group col-md-4">
-                                                 <label>City</label>
-                                                 {{ profile_form.city }}
-                                             </div>
-                                             <div class="form-group col-md-4">
-                                                 <label>State</label>
-                                                 {{ profile_form.state }}
-                                             </div>
-                                             <div class="form-group col-md-4">
-                                                 <label>Country</label>
-                                                 {{ profile_form.country }}
-                                             </div>
-                                        </div>
-                                        <input type="submit" value="Save" class="bnt btn-primary form-control">
+                                        <input type="submit" value="Submit" class="bnt btn-primary form-control">
 
                                     </form>
                                 </div>
