--- a/templates/accounts/edit_profile.html
+++ b/templates/accounts/edit_profile.html
@@ -4,7 +4,7 @@
 
 
     <!-- ========================= SECTION CONTENT ========================= -->
-    <section class="section-conten padding-y bg">
+    <section class="section-content padding-y bg">
         {% include 'includes/alerts.html' %}
         <div class="container">
             <div class="row">
@@ -15,50 +15,56 @@
                             <strong class="d-inline-block mr-3">Edit your Profile.</strong>
                         </header>
                         <div class="card-body">
+                            <div class="text-right">
+                                <img src="{{ userprofile.profile_picture.url }}"
+                                     alt="Profile Picture" width="100"
+                                     style="border-radius: 50px">
+                            </div><br>
+
                             <div class="row">
                                 <div class="col-md-12">
-                                    <form action=""method="POST">
+                                    <form action="{% url 'edit_profile' %}" method="POST" enctype="multipart/form-data">
                                         {% csrf_token %}
                                         <div class="form-row">
                                              <div class="form-group col-md-6">
                                                  <label>First Name</label>
-                                                 <input type="text" class="form-control" name="">
+                                                 {{ user_form.first_name }}
                                              </div>
                                              <div class="form-group col-md-6">
                                                  <label>Last Name</label>
-                                                 <input type="text" class="form-control" name="">
+                                                 {{ user_form.last_name }}
                                              </div>
                                         </div>
                                         <div class="form-row">
                                              <div class="form-group col-md-6">
                                                  <label>Phone number</label>
-                                                 <input type="text" class="form-control" name="">
+                                                 {{ user_form.phone_number }}
                                              </div>
                                              <div class="form-group col-md-6">
                                                  <label>Profile Picture</label>
-                                                 <input type="file" class="form-control" name="">
+                                                 {{ profile_form.profile_picture }}
                                              </div>
                                         </div>
                                         <div class="form-group">
                                             <label>Address Line 1</label>
-                                            <input type="text" class="form-control" name="">
+                                                 {{ profile_form.address_line_1 }}
                                         </div>
                                         <div class="form-group">
                                             <label>Address Line 2</label>
-                                            <input type="text" class="form-control" name="">
+                                                 {{ profile_form.address_line_2 }}
                                         </div>
                                         <div class="form-row">
                                              <div class="form-group col-md-4">
                                                  <label>City</label>
-                                                 <input type="text" class="form-control" name="">
+                                                 {{ profile_form.city }}
                                              </div>
                                              <div class="form-group col-md-4">
                                                  <label>State</label>
-                                                 <input type="text" class="form-control" name="">
+                                                 {{ profile_form.state }}
                                              </div>
                                              <div class="form-group col-md-4">
                                                  <label>Country</label>
-                                                 <input type="file" class="form-control" name="">
+                                                 {{ profile_form.country }}
                                              </div>
                                         </div>
                                         <input type="submit" value="Save" class="bnt btn-primary form-control">
