--- a/templates/accounts/order_detail.html
+++ b/templates/accounts/order_detail.html
@@ -34,10 +34,10 @@
                             <div class="invoice-details mt25">
                                 <div class="well">
                                     <ul class="list-unstyled mb0">
-                                        <li><strong>Order</strong> #{{ order_number }}</li>
-                                        <li><strong>Transaction</strong>{{ transID }}</li>
+                                        <li><strong>Order</strong> #{{ order.order_number }}</li>
+                                        <li><strong>Transaction</strong> - {{ order.payment.payment_id }}</li>
                                         <li><strong>Order Date:</strong> {{ order.created_at }}</li>
-                                        <li><strong>Status:</strong> {{ payment.status }}</li>
+                                        <li><strong>Status:</strong> {{ order.payment.status }}</li>
                                     </ul>
                                 </div>
                             </div>
@@ -53,7 +53,7 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                        {% for item in ordered_products %}
+                                        {% for item in order_detail %}
                                             <tr>
                                                 <td>
                                                     {{ item.product.product_name }}
